# iluvatarpipeline

./: .gitignore  CMakeLists.txt  README.md
config/: pipeline_one_stage.json  pipeline_two_stage.json  rtsp_params.json
inc/: FFmpegDemuxer.h  IluvatarIxRT.h  IluvatarJpegCodec.h  IluvatarPreprocess.h  IluvatarVideoDecoder.h  Logger.h  base_processor.h  json.h  memoryInterface.h  pipeline_one_stage.h  pipeline_two_stage.h  util.h
models/pplcnet/: README.md  modify_reshape.py
models/ppyoloe/: README.md  customize_op_for_model.py  inference_ixrt_dyn.py  yzc_customize_op.py
models/whl/: pycuda-2022.2.2+corex.4.1.2.20240906.154-cp310-cp310-linux_aarch64.whl
models/yolo11/: README.md  add_xywh2xyxy_onnx.py  inference_ixrt_dyn.py
models/yolov5/: README.md
models/yolov5-v5/: README.md  customize_op_for_model.py
models/yolov5-v6/: README.md  customize_op_for_model.py
models/yolov8/: README.md  add_xywh2xyxy_onnx.py  customize_op_for_model.py  inference_ixrt_dyn.py
src/apps/: CMakeLists.txt  base_processor.cpp  pipeline_one_stage.cpp  pipeline_two_stage.cpp
src/common/: CMakeLists.txt
src/common/surface/: memoryInterface.cpp
src/common/util/: Logger.cpp
src/modules/codec/: CMakeLists.txt  FFmpegDemuxer.cpp  IluvatarJpegCodec.cpp  IluvatarVideoDecoder.cpp
src/modules/extraProcess/: CMakeLists.txt  IluvatarPreprocess.cpp  preprocess.cu  preprocess.h
src/modules/infer/: CMakeLists.txt  IluvatarIxRT.cpp
test/: CMakeLists.txt  Pipeline_OneStage.cpp  Pipeline_TwoStage.cpp
